added kitty conf, updated zshrc and hypr and waybar

--- a/.config/hypr/custom/keybinds.conf
+++ b/.config/hypr/custom/keybinds.conf
@@ -13,3 +13,12 @@ $reverse = grave
 
 bind = $mod, $key, exec, hyprswitch gui --mod-key $mod --key $key --close mod-key-release --reverse-key=key=$reverse && hyprswitch dispatch
 bind = $mod $reverse, $key, exec, hyprswitch gui --mod-key $mod --key $key --close mod-key-release --reverse-key=key=$reverse && hyprswitch dispatch -r
+
+
+# use alias "small" to get this styling
+# windowrulev2 = float, class:kitty
+# windowrulev2 = size 1000 550, class:kitty
+# windowrulev2 = move 50%-w- 30%-w-, class:kitty
+# windowrulev2 = pin, class:kitty
+
+bind = Alt, Return, exec, kitty
