--- a/.config/hypr/custom/rules.conf
+++ b/.config/hypr/custom/rules.conf
@@ -2,17 +2,20 @@
 # Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
-windowrulev2 = float, class:org.kde.konsole
-windowrulev2 = float, class:Alacritty
-windowrulev2 = size 1000 550, class:org.kde.konsole
-windowrulev2 = size 1000 550, class:Alacritty
-windowrulev2 = move 50%-w- 30%-w-, class:org.kde.konsole
-windowrulev2 = pin, class:org.kde.konsole
 
-layerrule = blur, wofi
-layerrule = ignorezero, wofi
-layerrule = ignorealpha 0.5, wofi
-windowrulev2 = opacity 1 override 0.4 override, class:wofi
+windowrulev2 = float, class:Alacritty
+windowrulev2 = size 1000 550, class:Alacritty
+windowrulev2 = float, class:org.kde.konsole
+windowrulev2 = size 1000 550, class:org.kde.konsole
+windowrulev2 = move 50%-w- 30%-w-, class:org.kde.konsole
+windowrulev2 = pin, class:konsole
+
+
+# Wofi rules: add blur, ignore zero alpha, and set opacity for wofi windows
+# layerrule = blur, wofi
+# layerrule = ignorezero, wofi
+# layerrule = ignorealpha 0.5, wofi
+# windowrulev2 = opacity 1 override 0.4 override, class:wofi
 
 layerrule = blur, swaync-control-center
 layerrule = blur, swaync-notification-window
