--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -66,29 +66,29 @@ dwindle {
 decoration {
     rounding = 5
     
-    blur {
-        enabled = true
-        xray = false
-        special = false
-        new_optimizations = true
-        size = 14
-        passes = 4
-        brightness = 1
-        noise = 0.01
-        contrast = 1
-        popups = true
-        popups_ignorealpha = 0.6
-    }
+    # blur {
+    #     enabled = false
+    #     xray = false
+    #     special = false
+    #     new_optimizations = true
+    #     size = 14
+    #     passes = 4
+    #     brightness = 1
+    #     noise = 0.01
+    #     contrast = 1
+    #     popups = true
+    #     popups_ignorealpha = 0.6
+    # }
     
     # Shadow
-    shadow {
-        enabled = true
-        ignore_window = true
-        range = 20
-        offset = 0 2
-        render_power = 4
-        color = rgba(0000002A)
-    }
+    # shadow {
+    #     enabled = false
+    #     ignore_window = true
+    #     range = 20
+    #     offset = 0 2
+    #     render_power = 4
+    #     color = rgba(0000002A)
+    # }
 
     # Window Opacities
     # active_opacity = 1
