--- a/.config/hypr/hyprland/rules.conf
+++ b/.config/hypr/hyprland/rules.conf
@@ -72,10 +72,10 @@ layerrule = noanim, osk
 layerrule = noanim, hyprpicker
 
 layerrule = noanim, noanim
-layerrule = blur, gtk-layer-shell
-layerrule = ignorezero, gtk-layer-shell
-layerrule = blur, launcher
-layerrule = ignorealpha 0.5, launcher
+#layerrule = blur, gtk-layer-shell
+#layerrule = ignorezero, gtk-layer-shell
+# layerrule = blur, launcher
+# layerrule = ignorealpha 0.5, launcher
 layerrule = blur, notifications
 layerrule = ignorealpha 0.69, notifications
 layerrule = blur, logout_dialog # wlogout
