updated kitty conf

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,5 @@
+include ~/.cache/wal/colors-kitty.conf
+
 # Font
 font_family      SourceCodeVF
 font_size 20.0
@@ -18,6 +20,9 @@ confirm_os_window_close 0
 
 # Use bash shell
 shell zsh
+
+# fix for zsh anchor matching
+shell_integration no-sudo
 
 # Copy for normies
 map ctrl+c       copy_or_interrupt
