updated some configs

--- a/.config/hypr/hyprland/rules.conf
+++ b/.config/hypr/hyprland/rules.conf
@@ -62,7 +62,7 @@ workspace = 5, monitor : HDMI-A-4s
 
 # ######## Layer rules ########
 layerrule = xray 1, .*
-# layerrule = noanim, .*
+layerrule = noanim, .*
 layerrule = noanim, walker
 layerrule = noanim, selection
 layerrule = noanim, overview
@@ -71,11 +71,11 @@ layerrule = noanim, indicator.*
 layerrule = noanim, osk
 layerrule = noanim, hyprpicker
 
-layerrule = noanim, noanim
-#layerrule = blur, gtk-layer-shell
-#layerrule = ignorezero, gtk-layer-shell
+# layerrule = noanim, noanim
+# layerrule = blur, gtk-layer-shell
+# layerrule = ignorezero, gtk-layer-shell
 # layerrule = blur, launcher
 # layerrule = ignorealpha 0.5, launcher
-layerrule = blur, notifications
-layerrule = ignorealpha 0.69, notifications
-layerrule = blur, logout_dialog # wlogout
+# layerrule = blur, notifications
+# layerrule = ignorealpha 0.69, notifications
+# layerrule = blur, logout_dialog # wlogout
