--- a/.config/hypr/custom/rules.conf
+++ b/.config/hypr/custom/rules.conf
@@ -17,12 +17,12 @@ windowrulev2 = pin, class:konsole
 # layerrule = ignorealpha 0.5, wofi
 # windowrulev2 = opacity 1 override 0.4 override, class:wofi
 
-layerrule = blur, swaync-control-center
-layerrule = blur, swaync-notification-window
-layerrule = ignorezero, swaync-control-center
-layerrule = ignorezero, swaync-notification-window
-layerrule = ignorealpha 0.5, swaync-control-center
-layerrule = ignorealpha 0.5, swaync-notification-window
+# layerrule = blur, swaync-control-center
+# layerrule = blur, swaync-notification-window
+# layerrule = ignorezero, swaync-control-center
+# layerrule = ignorezero, swaync-notification-window
+# layerrule = ignorealpha 0.5, swaync-control-center
+# layerrule = ignorealpha 0.5, swaync-notification-window
 
 
 windowrule = float,title:^btop-overlay$
