--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,9 +5,10 @@ font_family      SourceCodeVF
 font_size 20.0
 
 # Style
-background_opacity 0
+background_opacity 0.0
 background_blur 0
 cursor_trail 3
+dim_opacity 1
 
 # Cursor shape
 cursor_shape beam
