--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -77,6 +77,7 @@
             "noise_reduction": 0.2,
             "input_delay": 0,
             "format-icons" : ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█" ],
+            "on-click": "pavucontrol"
         },
         "group/sound": {
             "orientation": "horizontal",
@@ -84,7 +85,6 @@
                 "cava",
                 "custom/spacer",
                 "pulseaudio#input"
-
             ]
         },
         "bluetooth": {
