updated hypr conf margins, fixed weird behavior on newly opened zsh

--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -42,9 +42,9 @@ bind = Alt+Super, R, exec, ~/.config/ags/scripts/record-script.sh # Record regio
 bind = Ctrl+Super, R, exec, ~/.config/ags/scripts/record-script.sh --fullscreen # [hidden] Record screen (no sound)
 bind = Alt+Shift+Super, R, exec, ~/.config/ags/scripts/record-script.sh --fullscreen-sound # Record screen (with sound)
 ##! Session
-bind = Ctrl+Alt, L, exec, agsv1 run-js 'lock.lock()' # [hidden]
-bind = Alt, L, exec, loginctl lock-session # Lock
-bind = Alt+Shift, L, exec, loginctl lock-session # [hidden]
+bind = Ctrl+Alt, L, exec, hyprlock # [hidden]
+bind = Alt, L, exec, hyprlock # Lock
+bind = Alt+Shift, L, exec, hyprlock # [hidden]
 bindl = Alt+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend # Suspend system
 bind = Ctrl+Shift+Super+Alt, Delete, exec, systemctl poweroff || loginctl poweroff # [hidden] Power off
 
