added blur to transparent windows

--- a/.config/hypr/custom/rules.conf
+++ b/.config/hypr/custom/rules.conf
@@ -24,6 +24,9 @@ windowrulev2 = pin, class:konsole
 # layerrule = ignorealpha 0.5, swaync-control-center
 # layerrule = ignorealpha 0.5, swaync-notification-window
 
+layerrule = blur, kitty
+layerrule = ignorealpha 0.5, kitty
+layerrule = ignorezero, kitty
 
 windowrule = float,title:^btop-overlay$
 windowrule = move 100 150,title:^btop-overlay$
