--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -66,19 +66,19 @@ dwindle {
 decoration {
     rounding = 5
     
-    # blur {
-    #     enabled = false
-    #     xray = false
-    #     special = false
-    #     new_optimizations = true
-    #     size = 14
-    #     passes = 4
-    #     brightness = 1
-    #     noise = 0.01
-    #     contrast = 1
-    #     popups = true
-    #     popups_ignorealpha = 0.6
-    # }
+    blur {
+        enabled = true
+        xray = true
+        special = false
+        new_optimizations = true
+        size = 2
+        passes = 4
+        brightness = 0.8
+        noise = 0.01
+        contrast = 1
+        popups = true
+        popups_ignorealpha = 0.6
+    }
     
     # Shadow
     # shadow {
