changed some keybinds and updated some conf styles

--- a/.config/hypr/custom/execs.conf
+++ b/.config/hypr/custom/execs.conf
@@ -4,3 +4,4 @@
 exec-once = hyprswitch init --show-title &
 exec-once = wal -R & # restore wal colors
 exec-once = ~/.config/hypr/custom/scripts/btop-overlay.sh
+exec-once = eww daemon &
