--- a/.config/hypr/hyprland/env.conf
+++ b/.config/hypr/hyprland/env.conf
@@ -8,17 +8,17 @@ env = SDL_IM_MODULE, fcitx
 env = GLFW_IM_MODULE, ibus
 env = INPUT_METHOD, fcitx
 
-env = GTK_THEME, adw-gtk3-dark
-env = GTK2_RC_FILES, $HOME/.gtkrc-2.0
+# env = GTK_THEME, adw-gtk3-dark
+# env = GTK2_RC_FILES, $HOME/.gtkrc-2.0
 
 # ############ Themes #############
 env = QT_QPA_PLATFORM, wayland
 env = QT_QPA_PLATFORMTHEME, qt6ct
-# env = QT_STYLE_OVERRIDE,kvantum
+#env = QT_STYLE_OVERRIDE,breeze
 # env = WLR_NO_HARDWARE_CURSORS, 1
 
 # ######## Screen tearing #########
-# env = WLR_DRM_NO_ATOMIC, 1
+env = WLR_DRM_NO_ATOMIC, 1
 
 # ######## Virtual envrionment #########
 env = XDG_STATE_HOME, $HOME/.local/state
