--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -60,6 +60,7 @@ bind = Alt, BracketLeft, movefocus, l # [hidden]
 bind = Alt, BracketRight, movefocus, r # [hidden]
 bindm = Alt, mouse:272, movewindow
 bindm = Alt+Ctrl, mouse:272, movewindow
+bindm = Super, mouse:272, movewindow
 bindm = Alt, mouse:273, resizewindow
 bind = Alt, Q, killactive,
 bind = Alt+Shift+Super, Q, exec, hyprctl kill # Pick and kill a window
@@ -101,6 +102,8 @@ bind = Alt, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspac
 # bind = Alt, mouse_down, workspace, -1 # [hidden]
 bind = Ctrl+Alt, mouse_up, workspace, r+1 # [hidden]
 bind = Ctrl+Alt, mouse_down, workspace, r-1 # [hidden]
+bind = Super, mouse_up, workspace, r+1 # [hidden]
+bind = Super, mouse_down, workspace, r-1 # [hidden]
 #/# bind = Ctrl+Alt, ←/→,, # Workspace: focus left/right
 bind = Ctrl+Alt, Right, workspace, r+1 # [hidden]
 bind = Ctrl+Alt, Left, workspace, r-1 # [hidden]
