updated a bunch of styling

--- a/.config/hypr/custom/execs.conf
+++ b/.config/hypr/custom/execs.conf
@@ -5,3 +5,4 @@ exec-once = hyprswitch init --show-title &
 exec-once = wal -R & # restore wal colors
 exec-once = ~/.config/hypr/custom/scripts/btop-overlay.sh
 exec-once = eww daemon &
+#exec-once = ~/scripts/hypr-idle-windows.sh
