--- a/.config/hypr/custom/keybinds.conf
+++ b/.config/hypr/custom/keybinds.conf
@@ -1,7 +1,7 @@
 # You can put your preferred keybinds here
 # https://wiki.hyprland.org/Configuring/Binds/
 
-bind = Alt, D, exec, discord
+bind = Alt, D, exec, discord-canary
 bind = Ctrl, ., pass, class:^(discord)$
 bind = Ctrl, +, pass, class:^(discord)$
 
