--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -19,7 +19,7 @@ bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- #
 ##! Essentials for beginners
 
 bind = Alt, T, exec, alacritty -e zsh # Launch console(terminal)
-bind = Ctrl+Alt, T, exec, ~/.config/ags/scripts/color_generation/switchwall.sh # Change wallpaper
+bind = Ctrl+Alt, T, exec, wallpaper # Change wallpaper
 ##! Actions
 # Screenshot, Record, OCR, Color picker, Clipboard history
 bind = Alt, V, exec, pkill wofi || cliphist list | wofi --show drun -n  --match-mode fzf --dmenu | cliphist decode | wl-copy # Clipboard history >> clipboard
@@ -44,6 +44,7 @@ bind = Alt+Shift+Super, R, exec, ~/.config/ags/scripts/record-script.sh --fullsc
 ##! Session
 bind = Ctrl+Alt, L, exec, hyprlock # [hidden]
 bind = Alt, L, exec, hyprlock # Lock
+bind = Super, L, exec, hyprlock # [hidden]
 bind = Alt+Shift, L, exec, hyprlock # [hidden]
 bindl = Alt+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend # Suspend system
 bind = Ctrl+Shift+Super+Alt, Delete, exec, systemctl poweroff || loginctl poweroff # [hidden] Power off
@@ -63,6 +64,7 @@ bindm = Alt+Ctrl, mouse:272, movewindow
 bindm = Super, mouse:272, movewindow
 bindm = Alt, mouse:273, resizewindow
 bind = Alt, Q, killactive,
+bind = Super, Q, killactive
 bind = Alt+Shift+Super, Q, exec, hyprctl kill # Pick and kill a window
 ##! Window arrangement
 #/# bind = Alt+Shift, ←/↑/→/↓,, # Window: move in direction
@@ -163,7 +165,7 @@ bind = Ctrl+Alt, S, togglespecialworkspace, # [hidden]
 bindr = Ctrl+Alt, R, exec, killall ags agsv1 ydotool; agsv1 & # Restart widgets
 # bindr = Ctrl+Alt+Super, R, exec, hyprctl reload; killall agsv1 ydotool; agsv1 & # [hidden]
 bind = Ctrl+Super, Slash, exec, agsv1 run-js 'cycleMode();' # Cycle bar mode (normal, focus)
-bind = Super, Tab, exec, wofi --show drun -n # [hidden]
+bind = Super, Tab, exec, wofiscript # [hidden]
 # bind = Alt, Slash, exec, for ((i=0; i<$(hyprctl monitors -j | jq length); i++)); do agsv1 -t "cheatsheet""$i"; done # Show cheatsheet
 bind = Alt, B, exec, agsv1 -t 'sideleft' # Toggle left sidebar
 bind = Alt, A, exec, agsv1 -t 'sideleft' # [hidden]
