--- a/.config/hypr/hyprland/rules.conf
+++ b/.config/hypr/hyprland/rules.conf
@@ -47,6 +47,9 @@ windowrulev2 = float, title:^(Library)(.*)$
 windowrulev2 = float, title:^(File Upload)(.*)$
 # windowrulev2 = center, class:Code
 
+# Manual Tiling
+windowrulev2 = tile, class:^(monado-service)$
+
 # --- Tearing ---
 windowrulev2 = immediate, title:.*\.exe
 windowrulev2 = immediate, class:^(steam_app)
