--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -31,7 +31,7 @@ input-field {
 }
 label {
     monitor =
-    text = cmd[update:1000] date +"<b>%I</b>"
+    text = cmd[update:1000] date +"<b>%H</b>"
     color = $color9
     font_size = 200
     font_family = CodeNewRoman Nerd Font Propo
